--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -19,6 +19,7 @@ on:
         default: 'openwrt-23.05'
         type: choice
         options:
+          - 'openwrt-24.10'
           - 'openwrt-23.05'
           - 'openwrt-21.02'
           - 'openwrt-18.06'
@@ -32,7 +33,7 @@ on:
         type: choice
         options:
           - 'x86_64'
-          - 'aarch64'
+          - 'x86_64_24'
       CPU_SELECTION:
         description: 'CPU优选,增加编译速度'
         required: true
