--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -67,6 +67,13 @@ jobs:
         git clone -b "${REPO_BRANCH}" --single-branch "${REPO_URL}" openwrt
         ln -sf /${{ env.DIY_WORK }}/openwrt ${GITHUB_WORKSPACE}/openwrt
     
+#    - name: 修改版本号        不能全源码编译通过,仅针对特定版本
+#     run: |
+#       cd openwrt
+#       git tag -l
+#       git describe --tags
+#       git checkout v24.10.1
+
     - name: 公告
       continue-on-error: true
       uses: 281677160/common@message
