--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -16,7 +16,7 @@ on:
       REPO_BRANCH:
         description: '天灵源码-请选择分支'
         required: true
-        default: 'openwrt-23.05'
+        default: 'openwrt-24.10'
         type: choice
         options:
           - 'openwrt-24.10'
@@ -78,8 +78,8 @@ on:
 
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
-#  schedule:
-#   - cron: 35 18 * * *
+  schedule:
+   - cron: 0 9 */5 * *
 
 env:
   GIT_REPOSITORY: ${{github.repository}}
