--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -10,14 +10,14 @@
 #
 
 name: Immortalwrt-天灵
-on:
+于:
   workflow_dispatch:
     inputs:
       REPO_BRANCH:
         description: '天灵源码-请选择分支'
         required: true
-        default: 'openwrt-24.10'
-        type: choice
+        默认: 'openwrt-24.10'
+        输入: choice
         options:
           - 'openwrt-24.10'
           - 'openwrt-23.05'
@@ -25,16 +25,16 @@ on:
       CONFIG_FILE:
         description: '请选择[seed文件夹内]的配置文件'
         required: true
-        default: 'x86_64'
-        type: choice
+        默认: 'x86_64'
+        输入: choice
         options:
           - 'x86_64'
           - 'x86_64_2'
       INFORMATION_NOTICE:
         description: 'Telegram或pushplus信息通知'
         required: true
-        default: '关闭'
-        type: choice
+        默认: '关闭'
+        输入: choice
         options:
           - '关闭'
           - 'Telegram'
@@ -42,36 +42,36 @@ on:
       KEEP_WORKFLOWS:
         description: '清理workflows,保留[X]个runs不被清理'
         required: true
-        default: '5'
+        默认: '15'
       KEEP_RELEASES:
         description: '清理Releases,保留[X]个Releases不被清理'
         required: true
-        default: '3'
+        默认: '15'
       SSH_ACTION:
         description: 'SSH远程配置固件'
         required: false
-        default: 'false'
-        type: boolean
+        默认: 'false'
+        输入: boolean
       UPLOAD_FIRMWARE:
         description: '上传固件到 Github Artifacts'
         required: false
-        default: 'true'
-        type: boolean
+        默认: 'true'
+        输入: boolean
       UPLOAD_RELEASE:
         description: '发布固件到 Github Releases'
         required: false
-        default: 'false'
-        type: boolean
+        默认: 'false'
+        输入: boolean
       CACHEWRTBUILD_SWITCH:
         description: '缓存加速编译'
         required: false
-        default: 'true'
-        type: boolean
+        默认: 'true'
+        输入: boolean
       UPDATE_FIRMWARE_ONLINE:
         description: '在线更新固/打包aarch64系列为img固件'
         required: false
-        default: 'true'
-        type: boolean
+        默认: 'true'
+        输入: boolean
 
 
 # 如若启动定时编译的话,配置文件是设置对应文件夹内的settings.ini文件
